--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~6.0.9",
     "@angular/forms": "~6.0.9",
     "@angular/http": "~6.0.9",
+    "@angular/material": "~6.3.3",
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
