--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -12,6 +12,7 @@
     "@types/core-js": "~2.5.0",
     "@types/jquery": "~3.3.0",
     "core-js": "~2.5.7",
+    "copy-webpack-plugin": "^4.5.2",
     "html-webpack-plugin": "~3.2.0",
     "source-map-loader": "~0.2.3",
     "systemjs": "~0.21.4",
