--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -6,6 +6,7 @@
     "build:externals": "webpack --progress --config webpack.externals.js",
     "start": "webpack --watch --progress",
     "build": "webpack --progress",
+    "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
   "private": true,
@@ -15,6 +16,7 @@
     "@angular/cdk": "~6.3.3",
     "@angular/common": "~6.0.9",
     "@angular/compiler": "~6.0.9",
+    "@angular/compiler-cli": "~6.0.9",
     "@angular/core": "~6.0.9",
     "@angular/forms": "~6.0.9",
     "@angular/http": "~6.0.9",
@@ -43,7 +45,7 @@
     "style-loader": "~0.21.0",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
-    "typescript": "~2.9.0",
+    "typescript": "~2.7.2",
     "url-loader": "~1.0.1",
     "webpack": "~4.0.0",
     "webpack-cli": "~3.0.0",
