--- a/virtual-desktop/tsconfig.ngx-i18n.json
+++ b/virtual-desktop/tsconfig.ngx-i18n.json
@@ -1,9 +1,16 @@
 {
   "extends": "./tsconfig.json",
+  "include": [
+    "../../zlux-platform/interface/src/index.d.ts",
+    "../../zlux-platform/interface/src/mvd-hosting.d.ts",
+    "../../zlux-platform/interface/src/mvd-window-management.d.ts",
+    "./src/app"
+  ],
   "compilerOptions": {
     "outDir": "./src/assets/i18n",
     "paths": {
-      "@angular/core": ["../node_modules/@angular/core"]
+      "@angular/core": ["../node_modules/@angular/core"],
+      "zlux-base/*": ["../../../zlux-platform/base/src/*"]
     }
   }
 }
