--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
+    "angular-l10n": "^5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.1.2",
     "copy-webpack-plugin": "^4.5.2",
