move app property app into system-apps; rename plugin identifier for virtualdeskop and bootstrap
Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>

--- a/system-apps/app-prop-viewer/webClient/package.json
+++ b/system-apps/app-prop-viewer/webClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "org.zowe.zlux.sample.angular.webclient",
+  "name": "org.zowe.zlux.appmanager.app.propview.webclient",
   "version": "1.0.0",
   "scripts": {
     "start": "webpack --progress --colors --watch",
