Renaming plugins to be org.zowe
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -2,7 +2,7 @@
   "name": "mvd-bootstrap",
   "version": "0.0.0-zlux.version.replacement",
   "description": "The desktop bootstrapper for zLUX.",
-  "license": "private",
+  "license": "EPL-2.0",
   "scripts": {
     "build": "webpack --progress --colors",
     "start": "webpack --progress --colors --watch"
