--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=zlux:zlux-app-manager
 sonar.projectName=ZLUX Application Manager
-sonar.projectVersion=1.0.0
-sonar.sources=virtual-desktop/nodeServer,virtual-desktop/src,bootstrap/src
+sonar.projectVersion=0.9.4
+sonar.sources=virtual-desktop/nodeServer,virtual-desktop/src,bootstrap/src,system-apps/app-prop-viewer/webClient/src
