Fixed dependency versions
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
   "dependencies": {
-    "html2canvas": "^1.0.0-alpha.12"
+    "html2canvas": "~1.0.0-alpha.12"
   },
   "devDependencies": {
     "@angular/animations": "~6.0.9",
