Just a few fixes before merging multi-window support
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -9,9 +9,7 @@
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "dependencies": {
-    "html2canvas": "~1.0.0-alpha.12"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@angular/animations": "~6.0.9",
     "@angular/cdk": "~6.3.3",
@@ -25,8 +23,8 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
-    "@types/html2canvas": "0.0.35",
-    "angular-l10n": "^5.2.0",
+    "@types/html2canvas": "~0.0.35",
+    "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.1.2",
     "copy-webpack-plugin": "^4.5.2",
@@ -35,6 +33,7 @@
     "exports-loader": "~0.7.0",
     "file-loader": "~1.1.11",
     "font-awesome": "~4.7.0",
+    "html2canvas": "~1.0.0-alpha.12",
     "jquery": "~3.3.0",
     "json-loader": "~0.5.7",
     "ngx-i18nsupport": "~0.17.1",
