Replacing console.log with 1 unified logger for all app manager framework logic to cut down on debug messages appearing in standard log
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/tsconfig.json
+++ b/virtual-desktop/tsconfig.json
@@ -29,6 +29,9 @@
       "pluginlib/*": [
         "./pluginlib/*"
       ],
+      "virtual-desktop-logger": [
+        "./app/shared/logger"
+      ],
       "zlux-base/*": [
         "../../../zlux-platform/base/src/*"
       ],
