--- a/system-apps/app-settings-viewer/webClient/package.json
+++ b/system-apps/app-settings-viewer/webClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "org.zowe.zlux.appmanager.app.personalizationwindow.webclient",
+  "name": "org.zowe.zlux.appmanager.app.settingsviewer",
   "version": "1.0.0",
   "scripts": {
     "start": "webpack --progress --colors --watch",
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
+    "@zlux/widgets": "git+ssh://git@github.com:zowe/zlux-widgets.git",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~4.4.2",
     "copy-webpack-plugin": "~4.5.2",
