--- a/system-apps/system-settings-preferences/webClient/tsconfig.ngx-i18n.json
+++ b/system-apps/system-settings-preferences/webClient/tsconfig.ngx-i18n.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../virtual-desktop/plugin-config/tsconfig.i18n.json",
+  "extends": "../../../virtual-desktop/plugin-config/tsconfig.ngx-i18n.json",
     
   "include": [
     "./src"
