--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -28,6 +28,8 @@
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.1.2",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "~4.5.2",
     "core-js": "~2.5.7",
     "css-loader": "~1.0.0",
