--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -30,12 +30,12 @@
     "bootstrap": "~4.1.2",
     "compression-webpack-plugin": "~2.0.0",
     "copy-webpack-plugin": "~4.5.2",
-    "core-js": "~2.5.7",
+    "core-js": "~2.6.5",
     "css-loader": "~1.0.0",
     "exports-loader": "~0.7.0",
     "file-loader": "~1.1.11",
     "font-awesome": "~4.7.0",
-    "html2canvas": "~1.0.0-alpha.12",
+    "html2canvas": "~1.0.0-rc.1",
     "jquery": "~3.4.0",
     "json-loader": "~0.5.7",
     "ngx-i18nsupport": "~0.17.1",
@@ -52,8 +52,8 @@
     "tslint": "~5.10.0",
     "typescript": "~2.7.2",
     "url-loader": "~1.0.1",
-    "webpack": "~4.7.0",
-    "webpack-cli": "~3.0.0",
+    "webpack": "~4.31.0",
+    "webpack-cli": "~3.3.0",
     "zone.js": "~0.8.26"
   }
 }
