--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
     "@types/html2canvas": "~0.0.35",
-    "@zlux/widgets": "git+ssh://git@github.com/zowe/zlux-widgets.git",
+    "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git",
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.1.2",
