--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -28,6 +28,7 @@
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.3.1",
+    "codelyzer": "^5.1.0",
     "compression-webpack-plugin": "~2.0.0",
     "copy-webpack-plugin": "~4.5.2",
     "core-js": "~2.6.5",
@@ -49,6 +50,7 @@
     "style-loader": "~0.21.0",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
+    "tslint-react": "^4.0.0",
     "typeface-roboto": "~0.0.1",
     "typescript": "~2.7.2",
     "url-loader": "~1.0.1",
