--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -2,6 +2,10 @@
   "name": "mainframe-virtual-desktop",
   "version": "0.0.0-zlux.version.replacement",
   "license": "EPL-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zowe/zlux-app-manager.git"
+  },
   "scripts": {
     "build:externals": "webpack --progress --config webpack.externals.js",
     "start": "webpack --watch --progress",
@@ -29,8 +33,8 @@
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.3.1",
     "codelyzer": "~5.1.0",
-    "compression-webpack-plugin": "~2.0.0",
-    "copy-webpack-plugin": "~4.5.2",
+    "compression-webpack-plugin": "~3.1.0",
+    "copy-webpack-plugin": "~5.1.0",
     "core-js": "~2.6.5",
     "css-loader": "~1.0.0",
     "exports-loader": "~0.7.0",
@@ -54,7 +58,7 @@
     "typeface-roboto": "~0.0.1",
     "typescript": "~2.7.2",
     "url-loader": "~1.0.1",
-    "webpack": "~4.31.0",
+    "webpack": "~4.41.0",
     "webpack-cli": "~3.3.0",
     "zone.js": "~0.8.26"
   }
