--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -17,6 +17,7 @@
     "@types/core-js": "~2.5.0",
     "@types/jquery": "~3.3.0",
     "compression-webpack-plugin": "~3.1.0",
+    "copy-webpack-plugin": "~5.1.0",
     "core-js": "~2.6.0",
     "html-webpack-plugin": "~3.2.0",
     "source-map-loader": "~0.2.3",
