Web Browser App: Begin with Proxy service
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/nodeServer/tsconfig.json
+++ b/system-apps/web-browser-app/nodeServer/tsconfig.json
@@ -4,6 +4,7 @@
     "ts/*.ts"
   ],
   "compilerOptions": {
+    "target": "ES5",
     "outDir": "../lib",
     "sourceMap": true,
     "allowJs": true,
@@ -11,6 +12,8 @@
     "types": [
       "node",
       "express"
-    ]
+    ],
+    "lib": ["es6"],
+    "esModuleInterop": true
   }
 }
