--- a/system-apps/web-browser-app/nodeServer/package.json
+++ b/system-apps/web-browser-app/nodeServer/package.json
@@ -6,9 +6,12 @@
     "build": "tsc",
     "start": "tsc --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "http-proxy": "^1.18.0"
+  },
   "devDependencies": {
     "@types/express": "~4.16.0",
+    "@types/http-proxy": "^1.17.3",
     "@types/node": "~8.10.23",
     "typescript": "~2.9.0"
   }
