--- a/system-apps/web-browser-app/nodeServer/package.json
+++ b/system-apps/web-browser-app/nodeServer/package.json
@@ -10,9 +10,9 @@
     "http-proxy": "^1.18.0"
   },
   "devDependencies": {
-    "@types/express": "~4.16.0",
+    "@types/express": "^4.16.1",
     "@types/http-proxy": "^1.17.3",
-    "@types/node": "~8.10.23",
+    "@types/node": "^8.10.59",
     "typescript": "~2.9.0"
   }
 }
