--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
+    "@carbon/icons-angular": "^10.8.0",
     "angular-l10n": "5.2.0",
     "angular2-template-loader": "~0.6.2",
+    "carbon-components": "^10.10.1",
+    "carbon-components-angular": "^3.46.3",
     "codelyzer": "~4.4.2",
     "copy-webpack-plugin": "~4.5.2",
     "core-js": "~2.5.7",
@@ -32,7 +35,9 @@
     "file-loader": "~1.1.11",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
+    "node-sass": "^4.13.1",
     "rxjs": "~6.2.2",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "~0.2.3",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
