--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -35,10 +35,12 @@
     "file-loader": "~1.1.11",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.12.0",
     "rxjs": "~6.2.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^7.2.0",
     "source-map-loader": "~0.2.3",
+    "style-loader": "^1.0.0",
+    "to-string-loader": "^1.1.6",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2",
