--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
-    "@carbon/icons-angular": "^10.8.0",
     "angular-l10n": "5.2.0",
     "angular2-template-loader": "~0.6.2",
-    "carbon-components": "^10.10.1",
-    "carbon-components-angular": "^3.46.3",
+    "@rocketsoftware/carbon-components": "0.0.5",
+    "@rocketsoftware/carbon-components-angular": "0.0.6",
+    "@rocketsoftware/icons-angular": "0.0.3",
     "codelyzer": "~4.4.2",
     "copy-webpack-plugin": "~4.5.2",
     "core-js": "~2.5.7",
