--- a/system-apps/web-browser-app/nodeServer/tsconfig.json
+++ b/system-apps/web-browser-app/nodeServer/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "allowJs": true,
     "moduleResolution": "node",
+    "downlevelIteration": true,
     "types": [
       "node",
       "express"
