Web Browser App: Fix swagger doc for proxy service
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/doc/swagger/proxy.yaml
+++ b/system-apps/web-browser-app/doc/swagger/proxy.yaml
@@ -54,6 +54,7 @@ paths:
             $ref: '#/definitions/ProxyResult'
         '503':
           description: Proxy unavailable
+  /{port}:
     put:
       summary: Replace target URL for existing Proxy server
       description: Replace target URL for existing Proxy server
