Web Browser App: Add Copyright and link to external docs into proxy.yaml
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/doc/swagger/proxy.yaml
+++ b/system-apps/web-browser-app/doc/swagger/proxy.yaml
@@ -1,3 +1,11 @@
+#  This program and the accompanying materials are
+#  made available under the terms of the Eclipse Public License v2.0 which accompanies
+#  this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
+#
+#  SPDX-License-Identifier: EPL-2.0
+#
+#  Copyright Contributors to the Zowe Project.
+
 swagger: '2.0'
 info:
   description: Proxy Server management API
@@ -134,3 +142,15 @@ definitions:
               type: string
             port:
               type: integer
+
+externalDocs:
+  description: "Find out more about Zowe"
+  url: "https://www.zowe.org/"
+
+#  This program and the accompanying materials are
+#  made available under the terms of the Eclipse Public License v2.0 which accompanies
+#  this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
+#
+#  SPDX-License-Identifier: EPL-2.0
+#
+#  Copyright Contributors to the Zowe Project.
