fix project key
Signed-off-by: Jack (T.) Jia <jack-tiefeng.jia@ibm.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=zlux:zlux-app-manager
+sonar.projectKey=zlux-app-manager
 sonar.projectName=ZLUX Application Manager
 sonar.projectVersion=0.9.4
 sonar.sources=virtual-desktop/nodeServer,virtual-desktop/src,bootstrap/src,system-apps/app-prop-viewer/webClient/src,system-apps/system-settings-preferences/webClient/src
