define sonar.organization and fix project key
Signed-off-by: Jack (T.) Jia <jack-tiefeng.jia@ibm.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,11 @@
-sonar.projectKey=zlux-app-manager
+# must be unique in a given SonarQube instance
+sonar.projectKey=zowe_zlux-app-manager
+sonar.organization=zowe
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=ZLUX Application Manager
-sonar.projectVersion=0.9.4
+# this will be automatically set by Jenkins Library
+# sonar.projectVersion=0.9.4
+# Project source repository.
+sonar.links.scm=https://github.com/zowe/zlux-app-manager
+
 sonar.sources=virtual-desktop/nodeServer,virtual-desktop/src,bootstrap/src,system-apps/app-prop-viewer/webClient/src,system-apps/system-settings-preferences/webClient/src
