Make VSCode Intellisense work by fixing tsconfig.json
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/virtual-desktop/tsconfig.json
+++ b/virtual-desktop/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "include": [
+    "./src/**/*.ts",
     "../../zlux-platform/interface/src/index.d.ts",
     "../../zlux-platform/interface/src/mvd-hosting.d.ts",
     "../../zlux-platform/interface/src/mvd-window-management.d.ts"
@@ -29,8 +30,8 @@
       "pluginlib/*": [
         "./pluginlib/*"
       ],
-      "virtual-desktop-logger/*": [
-        "./app/shared/*"
+      "virtual-desktop-logger": [
+        "./app/shared/logger.ts"
       ],
       "zlux-base/*": [
         "../../../zlux-platform/base/src/*"
