Reuse Capabilities declared in zlux-platform
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>
Signed-off-by: Mitesh <miteshgoplani@gmail.com>

--- a/virtual-desktop/tsconfig.json
+++ b/virtual-desktop/tsconfig.json
@@ -4,7 +4,8 @@
     "./src/**/*.ts",
     "../../zlux-platform/interface/src/index.d.ts",
     "../../zlux-platform/interface/src/mvd-hosting.d.ts",
-    "../../zlux-platform/interface/src/mvd-window-management.d.ts"
+    "../../zlux-platform/interface/src/mvd-window-management.d.ts",
+    "../../zlux-platform/interface/src/server-framework.d.ts"
   ],
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
