Add server-framework.d.ts into tsconfig.ngx-i18n.json
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>
Signed-off-by: Mitesh <miteshgoplani@gmail.com>

--- a/virtual-desktop/tsconfig.ngx-i18n.json
+++ b/virtual-desktop/tsconfig.ngx-i18n.json
@@ -4,6 +4,7 @@
     "../../zlux-platform/interface/src/index.d.ts",
     "../../zlux-platform/interface/src/mvd-hosting.d.ts",
     "../../zlux-platform/interface/src/mvd-window-management.d.ts",
+    "../../zlux-platform/interface/src/server-framework.d.ts",
     "./src/app"
   ],
   "compilerOptions": {
