--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "~6.0.9",
     "@types/html2canvas": "~0.0.35",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git",
+    "@types/xmldom": "0.1.29",
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.3.1",
