--- a/system-apps/app-generator/nodeServer/package.json
+++ b/system-apps/app-generator/nodeServer/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
+  "license": "EPL-2.0",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
