--- a/system-apps/app-generator/webClient/package.json
+++ b/system-apps/app-generator/webClient/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zowe-app-generator",
   "version": "1.0.0",
-  "license": "",
+  "license": "EPL-2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
