--- a/system-apps/desktop-documentation-viewer/webClient/package.json
+++ b/system-apps/desktop-documentation-viewer/webClient/package.json
@@ -7,9 +7,11 @@
     "i18next": "~15.1.0",
     "i18next-browser-languagedetector": "~3.0.1",
     "i18next-xhr-backend": "~2.0.1",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "~16.8.6",
     "react-dom": "~16.8.6",
     "react-i18next": "~10.9.0",
+    "monaco-editor": "^0.20.0",
     "react-router": "~4.3.1",
     "react-scripts-ts": "2.16.0"
   },
@@ -19,9 +21,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "~23.0.2",
-    "@types/react": "~16.3.18",
-    "@types/react-dom": "~16.0.11",
+    "@types/jest": "~26.0.10",
+    "@types/react": "~16.9.46",
+    "@types/react-dom": "~16.9.8",
     "copy-webpack-plugin": "~4.5.2",
     "css-loader": "~1.0.0",
     "exports-loader": "~0.7.0",
@@ -31,7 +33,7 @@
     "source-map-loader": "~0.2.3",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
-    "typescript": "~2.9.0",
+    "typescript": "~3.7.0",
     "url-loader": "~1.0.1",
     "webpack": "~4.41.6",
     "webpack-cli": "~3.0.0",
