--- a/system-apps/desktop-documentation-viewer/webClient/package.json
+++ b/system-apps/desktop-documentation-viewer/webClient/package.json
@@ -7,11 +7,10 @@
     "i18next": "~15.1.0",
     "i18next-browser-languagedetector": "~3.0.1",
     "i18next-xhr-backend": "~2.0.1",
-    "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "~16.8.6",
     "react-dom": "~16.8.6",
     "react-i18next": "~10.9.0",
-    "monaco-editor": "^0.20.0",
+    "react-monaco-editor": "^0.40.0",
     "react-router": "~4.3.1",
     "react-scripts-ts": "2.16.0"
   },
@@ -29,6 +28,7 @@
     "exports-loader": "~0.7.0",
     "file-loader": "~1.1.11",
     "html-loader": "~0.5.5",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "script-loader": "~0.7.2",
     "source-map-loader": "~0.2.3",
     "ts-loader": "~4.4.2",
