Added Async await for getting the llist of files Added doc strings Added support for css modules and migrated from js-based modules
Signed-off-by: Parth Shandilya <parth1989shandilya@gmail.com>

--- a/system-apps/desktop-documentation-viewer/nodeServer/package.json
+++ b/system-apps/desktop-documentation-viewer/nodeServer/package.json
@@ -4,7 +4,7 @@
   "description": "Dataservice to send the plugin details to client",
   "scripts": {
     "build": "tsc",
-    "start": "tsc --watch"
+    "start": "tsc -p tsconfig.json && tsc --watch"
   },
   "dependencies": {},
   "devDependencies": {
