--- a/system-apps/desktop-documentation-viewer/nodeServer/tsconfig.json
+++ b/system-apps/desktop-documentation-viewer/nodeServer/tsconfig.json
@@ -4,6 +4,7 @@
     "ts/*.ts"
   ],
   "compilerOptions": {
+    "target": "ES6",
     "outDir": "../lib",
     "sourceMap": true,
     "allowJs": true,
