--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -13,7 +13,9 @@
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/qs": "^6.9.3"
+  },
   "devDependencies": {
     "@angular/animations": "~6.0.9",
     "@angular/cdk": "~6.3.3",
@@ -28,6 +30,7 @@
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
     "@types/html2canvas": "~0.0.35",
+    "@types/xmldom": "0.1.29",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git",
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
