--- a/system-apps/desktop-documentation-viewer/webClient/package.json
+++ b/system-apps/desktop-documentation-viewer/webClient/package.json
@@ -4,6 +4,7 @@
   "description": "React frontend for Zowe documentation viewer",
   "license": "EPL-2.0",
   "dependencies": {
+    "debounce": "^1.2.1",
     "i18next": "~15.1.0",
     "i18next-browser-languagedetector": "~3.0.1",
     "i18next-xhr-backend": "~2.0.1",
@@ -12,8 +13,9 @@
     "react-dom": "~16.8.6",
     "react-i18next": "~10.9.0",
     "react-monaco-editor": "^0.40.0",
-    "react-router": "~4.3.1",
-    "react-scripts-ts": "2.16.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts-ts": "2.16.0",
+    "react-select": "^4.3.0"
   },
   "scripts": {
     "start": "webpack --progress --colors --watch",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "~26.0.10",
+    "@types/node": "^14.14.35",
     "@types/react": "~16.9.46",
     "@types/react-dom": "~16.9.8",
     "copy-webpack-plugin": "~4.5.2",
