--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -10,9 +10,9 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.9",
+    "@angular-devkit/build-angular": "~0.1102.11",
     "@angular/animations": "~6.0.9",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "~8.0.0",
     "@angular/common": "~6.0.9",
     "@angular/compiler": "~6.0.9",
     "@angular/compiler-cli": "~6.0.9",
@@ -25,7 +25,7 @@
     "angular-l10n": "5.2.0",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~4.4.2",
-    "copy-webpack-plugin": "~5.1.0",
+    "copy-webpack-plugin": "~5.1.2",
     "core-js": "~2.5.7",
     "css-loader": "~1.0.0",
     "exports-loader": "~0.7.0",
@@ -41,7 +41,7 @@
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2",
-    "webpack": "~4.41.0",
+    "webpack": "~4.43.0",
     "webpack-cli": "~3.3.0",
     "webpack-config": "~7.5.0",
     "zone.js": "~0.8.26"
