--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -13,13 +13,10 @@
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@angular/animations": "~6.0.9",
     "@angular/cdk": "~6.3.3",
     "@angular/common": "~6.0.9",
-    "@angular/compiler": "~6.0.9",
-    "@angular/compiler-cli": "~6.0.9",
     "@angular/core": "~6.0.9",
     "@angular/forms": "~6.0.9",
     "@angular/http": "~6.0.9",
@@ -27,42 +24,46 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
-    "@types/html2canvas": "~0.0.35",
-    "@types/xmldom": "0.1.29",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git",
-    "angular-l10n": "~5.2.0",
-    "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.3.1",
-    "codelyzer": "~5.1.0",
-    "compression-webpack-plugin": "~4.0.0",
-    "copy-webpack-plugin": "~5.1.0",
     "core-js": "~2.6.5",
-    "css-loader": "~1.0.0",
-    "exports-loader": "~0.7.0",
-    "file-loader": "~1.1.11",
     "font-awesome": "~4.7.0",
     "html2canvas": "~1.0.0-rc.1",
     "jquery": "~3.5.0",
-    "json-loader": "~0.5.7",
-    "moment": "~2.25.3",
     "ngx-file-drop": "~6.0.1",
-    "ngx-i18nsupport": "~0.17.1",
     "popper.js": "~1.14.3",
-    "raw-loader": "~0.5.1",
     "requirejs": "~2.3.5",
     "rxjs": "~6.2.2",
     "rxjs-compat": "~6.2.2",
+    "typeface-roboto": "~0.0.1",
+    "zone.js": "~0.8.26"
+  },
+  "devDependencies": {
+    "@angular/compiler": "~6.0.9",
+    "@angular/compiler-cli": "~6.0.9",
+    "@types/html2canvas": "~0.0.35",
+    "@types/xmldom": "0.1.29",
+    "angular-l10n": "~5.2.0",
+    "angular2-template-loader": "~0.6.2",
+    "codelyzer": "~5.1.0",
+    "compression-webpack-plugin": "~4.0.0",
+    "copy-webpack-plugin": "~5.1.1",
+    "css-loader": "~1.0.0",
+    "exports-loader": "~0.7.0",
+    "file-loader": "~1.1.11",
+    "json-loader": "~0.5.7",
+    "moment": "~2.25.3",
+    "ngx-i18nsupport": "~0.17.1",
+    "raw-loader": "~0.5.1",
     "script-loader": "~0.7.2",
     "source-map-loader": "~0.2.3",
     "style-loader": "~0.21.0",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "tslint-react": "~4.0.0",
-    "typeface-roboto": "~0.0.1",
-    "typescript": "~2.7.2",
+    "typescript": "~2.9.0",
     "url-loader": "~1.0.1",
     "webpack": "~4.46.0",
-    "webpack-cli": "~3.3.0",
-    "zone.js": "~0.8.26"
+    "webpack-cli": "~3.3.0"
   }
 }
