--- a/system-apps/app-generator/webClient/package.json
+++ b/system-apps/app-generator/webClient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zowe-app-generator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "EPL-2.0",
   "scripts": {
     "ng": "ng",
@@ -29,22 +29,22 @@
     "zone.js": "~0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.9",
+    "@angular-devkit/build-angular": "~0.803.14",
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@types/jasmine": "^2.8.2",
     "@types/node": "~8.0.53",
-    "codelyzer": "~5.0.0",
+    "codelyzer": "~5.1.0",
     "gzipper": "^3.5.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.1",
+    "karma": "^5.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "~4.14.0",
     "postcss-loader": "3.0.0",
     "protractor": "^5.4.2",
     "ts-node": "~8.0.3",
