--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org.zowe.zlux.ng2desktop.webbrowser.webclient",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors",
@@ -24,7 +24,7 @@
     "@angular/router": "~6.0.9",
     "angular-l10n": "5.2.0",
     "angular2-template-loader": "~0.6.2",
-    "codelyzer": "~4.4.2",
+    "codelyzer": "~5.1.0",
     "copy-webpack-plugin": "~5.1.2",
     "core-js": "~2.5.7",
     "css-loader": "~1.0.0",
@@ -32,16 +32,16 @@
     "file-loader": "~1.1.11",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
-    "node-sass": "^4.12.0",
+    "sass": "~1.26.0",
     "rxjs": "~6.2.2",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "~8.0.0",
     "source-map-loader": "~0.2.3",
     "style-loader": "^1.0.0",
     "to-string-loader": "^1.1.6",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2",
-    "webpack": "~4.43.0",
+    "webpack": "~4.46.0",
     "webpack-cli": "~3.3.0",
     "webpack-config": "~7.5.0",
     "zone.js": "~0.8.26"
