--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -15,19 +15,18 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "~7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/http": "~7.1.0",
-    "@angular/material": "~7.1.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "@types/html2canvas": "~0.0.35",
+    "@angular/animations": "~12.0.0",
+    "@angular/cdk": "~12.0.0",
+    "@angular/common": "~12.0.0",
+    "@angular/compiler": "~12.0.0",
+    "@angular/compiler-cli": "~12.0.0",
+    "@angular/core": "~12.0.0",
+    "@angular/forms": "~12.0.0",
+    "@angular/material": "~12.0.0",
+    "@angular/platform-browser": "~12.0.0",
+    "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/router": "~12.0.0",
+    "@types/html2canvas": "~1.0.0",
     "@types/xmldom": "0.1.29",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git",
     "angular-l10n": "~5.2.0",
@@ -41,7 +40,7 @@
     "exports-loader": "~0.7.0",
     "file-loader": "~1.1.11",
     "font-awesome": "~4.7.0",
-    "html2canvas": "~1.0.0-rc.1",
+    "html2canvas": "~1.3.2",
     "jquery": "~3.5.0",
     "json-loader": "~0.5.7",
     "moment": "~2.25.3",
@@ -51,7 +50,6 @@
     "raw-loader": "~0.5.1",
     "requirejs": "~2.3.5",
     "rxjs": "~6.2.2",
-    "rxjs-compat": "~6.2.2",
     "script-loader": "~0.7.2",
     "source-map-loader": "~0.2.3",
     "style-loader": "~0.21.0",
@@ -59,7 +57,7 @@
     "tslint": "~5.10.0",
     "tslint-react": "~4.0.0",
     "typeface-roboto": "~0.0.1",
-    "typescript": "~3.1.0",
+    "typescript": "~4.2.0",
     "url-loader": "~1.0.1",
     "webpack": "~4.46.0",
     "webpack-cli": "~3.3.0",
