Updated core-js to 3.19.0 - latest
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/tsconfig.json
+++ b/virtual-desktop/tsconfig.json
@@ -39,6 +39,12 @@
       ],
       "zlux-interface/*": [
         "../../../zlux-platform/interface/src/*"
+      ],
+      "core-js/es7/reflect": [
+        "../node_modules/core-js/proposals/reflect-metadata"
+      ],
+      "core-js/es6/reflect": [
+        "../node_modules/core-js/proposals/reflect-metadata"
       ]
     },
     "target": "es5",
