--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
+    "@ngtools/webpack": "^6.2.9",
     "angular-l10n": "5.2.0",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~5.1.0",
@@ -32,8 +33,8 @@
     "file-loader": "~1.1.11",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
-    "sass": "~1.26.0",
     "rxjs": "~6.2.2",
+    "sass": "~1.26.0",
     "sass-loader": "~8.0.0",
     "source-map-loader": "~0.2.3",
     "style-loader": "^1.0.0",
