--- a/virtual-desktop/tsconfig.json
+++ b/virtual-desktop/tsconfig.json
@@ -45,6 +45,12 @@
       ],
       "core-js/es6/reflect": [
         "../node_modules/core-js/proposals/reflect-metadata"
+      ],
+      "rxjs": [
+        "../node_modules/rxjs"
+      ],
+      "rxjs/operators": [
+        "../node_modules/rxjs/operators"
       ]
     },
     "target": "es5",
