--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -28,7 +28,7 @@
     "@angular/router": "~12.0.0",
     "@types/html2canvas": "~1.0.0",
     "@types/xmldom": "0.1.29",
-    "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git",
+    "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular",
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.3.1",
