--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -22,6 +22,7 @@
     "@angular/compiler-cli": "~12.0.0",
     "@angular/core": "~12.0.0",
     "@angular/forms": "~12.0.0",
+    "@angular/localize": "~12.0.0",
     "@angular/material": "~12.0.0",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
