--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -11,7 +11,8 @@
     "start": "webpack --watch --progress",
     "build": "webpack --progress",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
-    "lint": "tslint -c tslint.json \"src/**/*.ts\""
+    "lint": "tslint -c tslint.json \"src/**/*.ts\"",
+    "localize": "localize-extract -s ../web/desktop.js -f xlf -o messages-l.xlf"
   },
   "dependencies": {},
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@popperjs/core": "~2.10.2",
     "@types/html2canvas": "~1.0.0",
     "@types/xmldom": "0.1.29",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular",
@@ -46,7 +48,6 @@
     "moment": "~2.29.1",
     "ngx-file-drop": "~11.3.0",
     "ngx-i18nsupport": "~0.17.1",
-    "@popperjs/core": "~2.10.2",
     "raw-loader": "~1.0.0",
     "requirejs": "~2.3.6",
     "rxjs": "~6.6.0",
@@ -54,6 +55,7 @@
     "source-map-loader": "~1.1.3",
     "style-loader": "~1.3.0",
     "ts-loader": "~8.3.0",
+    "tslib": "~2.3.0",
     "tslint": "~5.10.0",
     "tslint-react": "~4.0.0",
     "typeface-roboto": "~1.1.13",
