--- a/system-apps/system-settings-preferences/webClient/package.json
+++ b/system-apps/system-settings-preferences/webClient/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.13",
     "@angular/animations": "~12.0.0",
-    "@angular/cli": "~7.0.0",
+    "@angular/cli": "~12.0.0",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
@@ -34,9 +34,9 @@
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
     "rxjs": "~6.6.0",
-    "rxjs-compat": "~6.2.2",
     "source-map-loader": "~1.1.3",
     "ts-loader": "~8.3.0",
+    "tslib": "~2.3.0",
     "tslint": "~5.10.0",
     "typescript": "~4.2.0",
     "url-loader": "2.3.0",
