--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.11",
     "@angular/animations": "~12.0.0",
-    "@angular/cli": "~8.0.0",
+    "@angular/cli": "~12.0.0",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
-    "angular-l10n": "5.2.0",
+    "angular-l10n": "~12.0.0",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~5.1.0",
     "copy-webpack-plugin": "~5.1.2",
@@ -32,13 +32,14 @@
     "file-loader": "~4.3.0",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
-    "sass": "~1.26.0",
     "rxjs": "~6.6.0",
+    "sass": "~1.26.0",
     "sass-loader": "~8.0.0",
     "source-map-loader": "~1.1.3",
     "style-loader": "~1.3.0",
-    "to-string-loader": "^1.1.6",
+    "to-string-loader": "~1.1.6",
     "ts-loader": "~8.3.0",
+    "tslib": "~2.3.0",
     "tslint": "~5.10.0",
     "typescript": "~4.2.0",
     "webpack": "~4.46.0",
