--- a/system-apps/web-browser-app/webClient/tsconfig.json
+++ b/system-apps/web-browser-app/webClient/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../../../virtual-desktop/plugin-config/tsconfig.strict.json"
+  "extends": "../../../virtual-desktop/plugin-config/tsconfig.strict.json",
+  "include": [
+    "./src"
+  ]
 }
