--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -54,6 +54,7 @@
     "source-map-loader": "~1.1.3",
     "style-loader": "~1.3.0",
     "ts-loader": "~8.3.0",
+    "tslib": "~2.3.0",
     "tslint": "~5.10.0",
     "tslint-react": "~4.0.0",
     "typeface-roboto": "~1.1.13",
