Compile Virtual Desktop with Webpack5
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -32,35 +32,31 @@
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~4.3.1",
     "codelyzer": "~5.1.0",
-    "compression-webpack-plugin": "~6.1.1",
-    "copy-webpack-plugin": "~5.1.2",
+    "compression-webpack-plugin": "~9.2.0",
+    "copy-webpack-plugin": "~10.2.0",
     "core-js": "~3.19.0",
-    "css-loader": "~3.6.0",
-    "exports-loader": "~0.7.0",
-    "file-loader": "~4.3.0",
+    "css-loader": "~6.5.1",
+    "exports-loader": "~3.1.0",
     "font-awesome": "~4.7.0",
+    "html-loader": "~3.0.1",
     "html2canvas": "~1.3.2",
     "jquery": "~3.6.0",
-    "json-loader": "~0.5.7",
     "moment": "~2.29.1",
     "ngx-file-drop": "~11.3.0",
     "ngx-i18nsupport": "~0.17.1",
-    "@popperjs/core": "~2.10.2",
-    "raw-loader": "~1.0.0",
+    "popper.js": "~1.14.7",
     "requirejs": "~2.3.6",
     "rxjs": "~6.6.0",
-    "script-loader": "~0.7.2",
-    "source-map-loader": "~1.1.3",
-    "style-loader": "~1.3.0",
+    "source-map-loader": "~3.0.0",
+    "style-loader": "~3.3.1",
     "ts-loader": "~8.3.0",
     "tslib": "~2.3.0",
     "tslint": "~5.10.0",
     "tslint-react": "~4.0.0",
     "typeface-roboto": "~1.1.13",
     "typescript": "~4.2.0",
-    "url-loader": "~2.3.0",
-    "webpack": "~4.46.0",
-    "webpack-cli": "~3.3.0",
+    "webpack": "~5.65.0",
+    "webpack-cli": "~4.9.1",
     "zone.js": "~0.11.4"
   }
 }
