--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -4,8 +4,8 @@
   "description": "The desktop bootstrapper for zLUX.",
   "license": "EPL-2.0",
   "scripts": {
-    "build": "webpack --progress --colors",
-    "start": "webpack --progress --colors --watch"
+    "build": "webpack --progress --color",
+    "start": "webpack --progress --color --watch"
   },
   "repository": {
     "type": "git",
@@ -16,17 +16,17 @@
   "devDependencies": {
     "@types/core-js": "~2.5.0",
     "@types/jquery": "~3.3.0",
-    "compression-webpack-plugin": "~6.1.1",
-    "copy-webpack-plugin": "~5.1.2",
+    "compression-webpack-plugin": "~9.2.0",
+    "copy-webpack-plugin": "~10.2.0",
     "core-js": "~3.19.0",
-    "html-webpack-plugin": "~3.2.0",
-    "source-map-loader": "~1.1.3",
+    "html-webpack-plugin": "~5.5.0",
+    "source-map-loader": "~3.0.0",
     "systemjs": "~0.21.4",
     "ts-loader": "~8.3.0",
     "tslint": "~5.10.0",
     "typescript": "~4.2.0",
-    "webpack": "~4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "~5.65.0",
+    "webpack-cli": "~4.9.1"
   },
   "dependencies": {
     "rxjs": "~6.6.0",
