Add manifest, update text files, update metadata
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/system-apps/admin-notification-app/webClient/package.json
+++ b/system-apps/admin-notification-app/webClient/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "admin-notification",
-  "version": "1.0.1",
+  "name": "admin-desktop-notification",
+  "version": "2.0.0",
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors",
