--- a/system-apps/admin-notification-app/webClient/package.json
+++ b/system-apps/admin-notification-app/webClient/package.json
@@ -8,15 +8,14 @@
   },
   "private": false,
   "dependencies": {
-    "@rocketsoftware/carbon-components": "0.0.5",
-    "@rocketsoftware/carbon-components-angular": "0.0.6",
-    "@rocketsoftware/icons-angular": "0.0.3",
+    "carbon-components": "^10.58.3",
+    "carbon-components-angular": "^4.74.0",
     "sass": "~1.26.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.3.0"
   },
   "devDependencies": {
-    "@angular/animations": "~12.0.0",
+    "@angular/animations": "~12.0.5",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
@@ -35,7 +34,7 @@
     "rxjs-compat": "~6.2.2",
     "source-map-loader": "~1.1.3",
     "ts-loader": "~8.3.0",
-    "tslint": "~5.10.0",
+    "tslint": "~6.1.3",
     "typescript": "~4.2.0",
     "webpack": "~4.46.0",
     "webpack-cli": "~3.3.12",
