--- a/system-apps/app-prop-viewer/webClient/package.json
+++ b/system-apps/app-prop-viewer/webClient/package.json
@@ -10,20 +10,20 @@
   "license": "EPL-2.0",
   "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/animations": "~12.0.0",
-    "@angular/cli": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/language-service": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/animations": "12.0.0",
+    "@angular/cli": "12.0.0",
+    "@angular/common": "12.0.0",
+    "@angular/compiler": "12.0.0",
+    "@angular/compiler-cli": "12.0.0",
+    "@angular/core": "12.0.0",
+    "@angular/forms": "12.0.0",
+    "@angular/language-service": "12.0.0",
+    "@angular/platform-browser": "12.0.0",
+    "@angular/platform-browser-dynamic": "12.0.0",
+    "@angular/router": "12.0.0",
     "angular2-template-loader": "~0.6.2",
-    "codelyzer": "~5.1.0",
+    "codelyzer": "~6.0.2",
     "copy-webpack-plugin": "~5.1.2",
     "core-js": "~3.19.0",
     "css-loader": "~3.6.0",
@@ -34,7 +34,7 @@
     "rxjs-compat": "~6.2.2",
     "source-map-loader": "~1.1.3",
     "ts-loader": "~8.3.0",
-    "tslint": "~5.10.0",
+    "tslint": "~6.1.0",
     "typescript": "~4.2.0",
     "webpack": "~4.46.0",
     "webpack-cli": "~3.3.0",
