--- a/system-apps/system-settings-preferences/webClient/package.json
+++ b/system-apps/system-settings-preferences/webClient/package.json
@@ -2,8 +2,8 @@
   "name": "org.zowe.zlux.ng2desktop.settings",
   "version": "2.0.0",
   "scripts": {
-    "start": "webpack --progress --watch",
-    "build": "webpack --progress",
+    "start": "webpack --progress --color --watch",
+    "build": "webpack --progress --color",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf",
     "lint": "tslint -c tslint.json \"./**/*.ts\""
   },
