Remove quotation marks from timestamp
Signed-off-by: James Struga <jstruga@rocketsoftware.com>

--- a/system-apps/admin-notification-app/manifest.yaml
+++ b/system-apps/admin-notification-app/manifest.yaml
@@ -22,6 +22,6 @@ build:
   branch: "{{build.branch}}"
   number: "{{build.number}}"
   commitHash: "{{build.commitHash}}"
-  timestamp: "{{build.timestamp}}"
+  timestamp: {{build.timestamp}}
 appfwPlugins:
   - path: .
