--- a/system-apps/web-browser-app/manifest.yaml
+++ b/system-apps/web-browser-app/manifest.yaml
@@ -23,6 +23,6 @@ build:
   branch: "{{build.branch}}"
   number: "{{build.number}}"
   commitHash: "{{build.commitHash}}"
-  timestamp: "{{build.timestamp}}"
+  timestamp: {{build.timestamp}}
 appfwPlugins:
   - path: .
