WIP prototype for Angular 16 upgrade
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -11,52 +11,53 @@
     "start": "webpack --watch --color --progress",
     "build": "webpack --color --progress",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
+    "i18n-2": "npx ng extract-i18n",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "dependencies": {},
   "devDependencies": {
-    "@angular/animations": "~12.0.0",
-    "@angular/cdk": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/material": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
+    "@angular/animations": "~16.0.0",
+    "@angular/cdk": "~16.0.0",
+    "@angular/cli": "~16.2.10",
+    "@angular/common": "~16.0.0",
+    "@angular/compiler": "~16.0.0",
+    "@angular/compiler-cli": "~16.0.0",
+    "@angular/core": "~16.0.0",
+    "@angular/forms": "~16.0.0",
+    "@angular/material": "~16.0.0",
+    "@angular/platform-browser": "~16.0.0",
+    "@angular/platform-browser-dynamic": "~16.0.0",
+    "@angular/router": "~16.0.0",
     "@types/xmldom": "0.1.29",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular",
-    "angular-l10n": "~12.0.0",
+    "angular-l10n": "~16.0.0",
     "angular2-template-loader": "~0.6.2",
-    "bootstrap": "~4.3.1",
+    "bootstrap": "~5.3.2",
     "codelyzer": "~6.0.2",
-    "compression-webpack-plugin": "~9.2.0",
-    "copy-webpack-plugin": "~10.2.0",
+    "compression-webpack-plugin": "~10.0.0",
+    "copy-webpack-plugin": "~11.0.0",
     "core-js": "~3.19.0",
-    "css-loader": "~6.5.1",
+    "css-loader": "~6.8.1",
     "exports-loader": "~3.1.0",
     "font-awesome": "~4.7.0",
-    "html-loader": "~3.0.1",
+    "html-loader": "~4.2.0",
     "html2canvas": "~1.3.2",
     "jquery": "~3.6.0",
     "moment": "~2.29.4",
-    "ngx-file-drop": "~11.3.0",
+    "ngx-file-drop": "~16.0.0",
     "ngx-i18nsupport": "~0.17.1",
     "popper.js": "~1.14.7",
     "requirejs": "~2.3.6",
     "rxjs": "~6.6.0",
     "source-map-loader": "~3.0.0",
     "style-loader": "~3.3.1",
-    "ts-loader": "~8.3.0",
+    "ts-loader": "~9.2.2",
     "tslib": "~2.3.0",
     "tslint": "~6.1.0",
     "tslint-react": "~5.0.0",
     "typeface-roboto": "~1.1.13",
-    "typescript": "~4.2.0",
+    "typescript": "~4.9.3",
     "webpack": "~5.76.0",
     "webpack-cli": "~4.9.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.0"
   }
 }
