(test commit - may need to delete)
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -11,10 +11,12 @@
     "start": "webpack --watch --color --progress",
     "build": "webpack --color --progress",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
-    "i18n-2": "npx ng extract-i18n",
+    "i18n-2": "ng extract-i18n",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~16.0.0",
+    "@angular/localize": "~16.0.0",
     "@angular/animations": "~16.0.0",
     "@angular/cdk": "~16.0.0",
     "@angular/cli": "~16.2.10",
@@ -28,7 +30,7 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
     "@types/xmldom": "0.1.29",
-    "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular",
+    "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular-16",
     "angular-l10n": "~16.0.0",
     "angular2-template-loader": "~0.6.2",
     "bootstrap": "~5.3.2",
@@ -47,7 +49,7 @@
     "ngx-i18nsupport": "~0.17.1",
     "popper.js": "~1.14.7",
     "requirejs": "~2.3.6",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.4.0",
     "source-map-loader": "~3.0.0",
     "style-loader": "~3.3.1",
     "ts-loader": "~9.2.2",
