--- a/virtual-desktop/tsconfig.ngx-i18n.json
+++ b/virtual-desktop/tsconfig.ngx-i18n.json
@@ -15,7 +15,8 @@
       "virtual-desktop-logger": [
         "./app/shared/logger"
       ]      
-    }
+    },
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "enableIvy": false
