--- a/virtual-desktop/tsconfig.ngx-i18n.json
+++ b/virtual-desktop/tsconfig.ngx-i18n.json
@@ -15,9 +15,10 @@
       "virtual-desktop-logger": [
         "./app/shared/logger"
       ]      
-    }
+    },
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": true
   }
 }
