remove .angular temporary files
Signed-off-by: Satish Wadkar <swadkar@rocketsoftware.com>

--- a/virtual-desktop/tsconfig.json
+++ b/virtual-desktop/tsconfig.json
@@ -8,8 +8,7 @@
     "../../zlux-platform/interface/src/server-framework.d.ts"
   ],
   "files": [
-    "./src/desktop.ts",
-    "./src/polyfills.ts"
+    "./src/desktop.ts"
   ],
   "compilerOptions": {
     "outDir": "dist/out-tsc",
