WIP on getting app-prop-viewer to load. Seems to get to component now, but no visual
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/angular.json
+++ b/virtual-desktop/angular.json
@@ -56,7 +56,7 @@
               "sourceMap": true
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -95,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
