--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build:externals": "webpack --progress --config webpack.externals.js",
-    "start": "webpack --watch --progress",
+    "start": "ng build --watch",
     "build": "ng build",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
